--- a/public/add-pizza.html
+++ b/public/add-pizza.html
@@ -183,6 +183,8 @@
     </div>
   </main>
   <script src="./assets/js/add-pizza.js"></script>
+  <!-- connection to idb.js-->
+  <script src="./assets/js/idb.js"></script>
 </body>
 
 </html>
